--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
-html, body { width: 100%; height: 100%; overflow: hidden; }
+html, body { width: 100%; height: 100%; overflow: hidden; overflow-y: auto;}
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -215,6 +215,9 @@ canvas {
   overflow-y: auto;  /* <--- enables scrolling */
   margin: 1.5rem auto 0;
   scroll-behavior: smooth;
+  max-height: 66vh;
+  overflow-y: auto;
+
 }
 #leaderboard::-webkit-scrollbar {
   width: 8px;
